# QtProject_IntelligentCourseSelector

./: README.md
IntelligentCourseSelector/: CMakeLists.txt
IntelligentCourseSelector/data/: checker.cpp  course.json  schedule.json
IntelligentCourseSelector/include/: course.h  jsonparser.h  mainwindow.h  schedule.h
IntelligentCourseSelector/src/: course.cpp  jsonparser.cpp  main.cpp  mainwindow.cpp  schedule.cpp
IntelligentCourseSelector/ui/: mainwindow.ui
